--- a/Backend/notification/package.json
+++ b/Backend/notification/package.json
@@ -16,6 +16,7 @@
     "amqplib": "^0.10.9",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "googleapis": "^166.0.0",
     "mongoose": "^8.19.2",
     "nodemailer": "^7.0.10"
   }
