--- a/Backend/notification/package.json
+++ b/Backend/notification/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "googleapis": "^166.0.0",
     "mongoose": "^8.19.2",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "ua-parser-js": "^2.0.6"
   }
 }
